--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(MCP_Spting2023)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(MCP_Spting2023 main.cpp)
+add_executable(MCP_Spting2023 main.cpp main.cpp TLS.cpp)
